# agents-genai

./: Comprehensive AI Agent Council for Technology Investment Decision Support.md  Graph_DB_demo_ggcd.ipynb  README.md
example/: example.py  hello.py  pyproject.toml
notebooks/: Agents_and_Multiagents_GenAI.ipynb
poetry-demo/: README.md  pyproject.toml  test.py
