[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Braulio Otavalo <56369660+beotavalo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
